--- a/report/main.tex
+++ b/report/main.tex
@@ -46,19 +46,19 @@
 \textbf{\scalebox{1.5}{{Document:}}}
 \vspace{0.5 cm} \\
 \scalebox{1.5}{\textcolor{RoyalBlue}{Report}} 
-\vspace{1cm}
+\vspace{1cm}\\
 \textbf{\scalebox{1.5}{{Author:}}}
 \vspace{0.5 cm} \\
 \scalebox{1.5}{{\textcolor{RoyalBlue}{Abimael Campillo Simón}}}                      
-\vspace{1cm}
+\vspace{1cm}\\
 \textbf{\scalebox{1.5}{{Director/Co-director:}}}
 \vspace{0.5 cm} \\
 \scalebox{1.5}{{\textcolor{RoyalBlue}{Prof.\ Dr.\ Alex Ferrer Ferre / Miguel Pareja Muñoz}}}                      
-\vspace{1cm}
+\vspace{1cm}\\
 \textbf{\scalebox{1.5}{{Degree:}}}
 \vspace{0.5 cm} \\
 \scalebox{1.5}{{\textcolor{RoyalBlue}{Bachelor in Aerospace Technology Engineering}}}                 
-\vspace{1cm}
+\vspace{1cm}\\
 \textbf{\scalebox{1.5}{{Examination session:}}}
 \vspace{0.5 cm} \\
 \scalebox{1.5}{{\textcolor{RoyalBlue}{Autumn 2025}}}     
