Chapters folder. Bibliography added.  Document structure predifined.

--- a/report/packages.tex
+++ b/report/packages.tex
@@ -20,3 +20,5 @@
 \usepackage{xcolor}             % Colors
 \definecolor{RoyalBlue}{RGB}{65,105,225}
 \usepackage{wrapfig}            % Wraping texts
+\usepackage{nomencl}
+\makenomenclature
