--- a/report/packages.tex
+++ b/report/packages.tex
@@ -20,5 +20,5 @@
 \usepackage{xcolor}             % Colors
 \definecolor{RoyalBlue}{RGB}{65,105,225}
 \usepackage{wrapfig}            % Wraping texts
-\usepackage{nomencl}
-\makenomenclature
+\usepackage[style=ieee, sorting=none, backend=biber]{biblatex} % Bibliography
+\addbibresource{references.bib}
