Project Charter modification. Requirements and scheduling added.

--- a/project_charter/Files/Justification.tex
+++ b/project_charter/Files/Justification.tex
@@ -1,7 +1,8 @@
 \chapter{Justification}
 
-Approach and explanation of the need to carry out the project from a global vision, i.e. detailing why this project may be necessary.
+\textcolor{red}{Justificar la necesidad de este proyecto mediante la inexistencia de calculadores de trayectorias optimas en maniobras de extinción de incendios para UAVs (campo inexplotado en esta concreción, pues algoritmos de cálculo de trayectorias ya existen). Añadir el contexto del proyecto de Singular Aircraft, su definición, las necesidades del Flyox en cuanto a autonomia y la maniobra de descarga. Destacar la visión global del proyecto pero profundizar en las partes específicas, detallando las ventajas y desventajas de la visión que se pretende implementar.}
 
+Approach and explanation of the need to carry out the project from a global vision, i.e. detailing why this project may be necessary.
 
 Furthermore, in case the thesis is based on another project or is developed within the framework of a company or research group, the section must also include a brief explanation about the context of the work, that is, about possible related projects and thesis that have been done before, focusing and contextualizing the work.
 
