--- a/project_charter/Files/Schedule.tex
+++ b/project_charter/Files/Schedule.tex
@@ -1,7 +1,88 @@
 \chapter{Schedule}
 
-Brief description of the tasks and packages of tasks to be performed in order to achieve the objective of the project or study, estimating the time required for the completion of each one of them.
+The following section includes a brief description of the tasks that can be seen on the work breakdown structure and how each task contributes to the achievement of the object of this project. Each description also includes a time estimation (in hours, h) of time required for its completion. Then, the dependencies between tasks is identified to produce a Gantt diagram, that can be seen at the end of the section. 
 
-Furthermore, in addition to describing the task packages, it is necessary to identify the dependencies between them and how they are related. 
+\textcolor{red}{Tasks description including time estimation, dependencies table and explanation, Gantt diagram of WP and tasks and explanation}
 
-Therefore, for this section to be well done, it will be necessary to add at the end the thesis schedule with the tasks, either in Gantt chart format or equivalent.
+\section{Tasks description and dependencies}
+For each task, the description includes the main object, the time estimation (Time in h) and its dependencies with other tasks [Associated Tasks].
+
+\subsection*{\gls{wp} 0. Project Management.}
+\begin{itemize}
+    \item \textbf{0.1. Workspace environment (8 h) [--]:} Configuration of the workspace environment in local folders but using a cloud repository in GitHub. It also includes the configuration of the LaTeX documents (packages, layouts, etc.). 
+    
+    \item \textbf{0.2. Wording of the deliverables (100 h) [0.6/WP1/WP2/WP3/WP4/WP5]:} Wording of the thesis project charter, thesis report, appendices, budget, environmental impact and other related documents that could arise. 
+    
+    \item \textbf{0.3. Scheduling (8 h) [--]:} Identification of time dedication for each task. Gantt diagram production and task allocation on a calendar. The possible changes due to unforeseen circumstances are also considered part of this task. 
+    
+    \item \textbf{0.4. Minutes of meetings (2.5 h) [--]:} Wording of the minutes of the meetings done within the development of the overall project. 
+    
+    \item \textbf{0.5. Version control (2.5 h) [WP0/WP1/WP2/WP3/WP4/WP5]:} Git version control implementation on the repository. Also consists on commit modifications every time something (e.g. code, documents) change. 
+    
+    \item \textbf{0.6. Environmental impact analysis (12 h) [WP1/WP2/WP3/WP4/WP5]:} Production of an environmental impact analysis of the project once it is almost finished (i.e. when all the other \gls{wp}s are done). 
+\end{itemize}
+
+\subsection*{\gls{wp} 1. State-of-the-art and theoretical background.}
+\begin{itemize}
+    \item \textbf{1.1. State-of-the-art (X h) [--]:}
+    
+    \item \textbf{1.2. Research gaps (X h) [--]:} 
+    
+    \item \textbf{1.3. Optimal control problem review (X h) [--]:} 
+    
+    \item \textbf{1.4. Gradient methods and adjoint problem review (X h) [--]:}  
+
+\end{itemize}
+
+\subsection*{\gls{wp} 2. Benchmark problems.}
+\begin{itemize}
+    \item \textbf{2.1. Flight mechanics (X h) [--]:}
+    
+    \item \textbf{2.2. Implementation and validation of benchmark problems (X h) [--]:} 
+    
+    \item \textbf{2.3. Flight Plan Generator function (X h) [--]:} 
+    
+    \item \textbf{2.4. Gradient methods and adjoint problem review (X h) [--]:}  
+
+\end{itemize}
+
+\subsection*{\gls{wp} 3. Water-drop manoeuvre.}
+\begin{itemize}
+    \item \textbf{3.1. Stakeholders requirements (X h) [--]:}
+    
+    \item \textbf{3.2. Flight mechanics on the water-drop manoeuvre (X h) [--]:} 
+    
+    \item \textbf{3.3. Constraints handling and definition (X h) [--]:} 
+    
+    \item \textbf{3.4. Implementation and validation of the solution (X h) [--]:}  
+
+    \item \textbf{3.5. \gls{qhil} verification of the water-drop manoeuvre(X h) [--]:}  
+
+    \item \textbf{3.6. Code performance notes (X h) [--]:}  
+
+\end{itemize}
+\subsection*{\gls{wp} 4. GO / NO-GO logic.}
+\begin{itemize}
+    \item \textbf{4.1. Go / No-Go logic implementation (X h) [--]:}
+    
+    \item \textbf{4.2. Representation function (X h) [--]:} 
+    
+    \item \textbf{4.3. Optimal Trajectory Choice function (X h) [--]:} 
+    
+    \item \textbf{4.4. Code performance notes about the logic (X h) [--]:}  
+
+\end{itemize}
+
+\subsection*{\gls{wp} 5. Code performance assessment.}
+\begin{itemize}
+    \item \textbf{5.1. Recapitulation of code performance (X h) [--]:}
+    
+    \item \textbf{5.2. Enhancing performance (X h) [--]:} 
+    
+    \item \textbf{5.3. Embedded solution feasibility analysis ( X h) [--]:}
+
+\end{itemize}
+
+\section{Gantt diagram}
+
+
