--- a/project_charter/Files/Scope.tex
+++ b/project_charter/Files/Scope.tex
@@ -1,6 +1,6 @@
 \chapter{Scope}
 
-This section includes a brief description of the work-packages this thesis addressed along with the high-level deliverables of each \gls{wp}. This description follows a chronological order such that the work pipeline evolution is graduated according to the milestones of the project, also defined. Then, the not included points on this thesis are also remarked at the end of the section.
+This section includes a brief description of the work-packages this thesis addressed along with the high-level deliverables of each \gls{wp}. This description follows a chronological order. Eventually, the not included points on this thesis are also remarked.
 
 \begin{itemize}
     \item \textbf{\gls{wp} 0. Project Management.}
@@ -61,9 +61,9 @@ This section includes a brief description of the work-packages this thesis addre
     \underline{\textbf{High-level deliverables:}} overall analysis and description of the possible solutions to enhance the code performance towards a real-time computation or on-board implementation. 
 \end{itemize}
 
-In the following figure, a work breakdown structure can be seen to clarify the work-packages addressed by this project and the tasks related in each case according to an specific codification that will be used later on.
+In the following figure, a work breakdown structure can be seen to clarify the work-packages addressed by this project and the tasks related in each case according to an specific codification.
 
-\begin{figure}
+\begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{Figures/WBS.png}
     \caption{Work breakdown structure of the project, including all the work-packages and tasks. Own source.}
