--- a/project_charter/main.tex
+++ b/project_charter/main.tex
@@ -43,7 +43,7 @@
 \pagestyle{fancy}
 \fancypagestyle{plain}{
   \fancyhf{}
-  \rhead{{\textbf{Real-Time Optimal Trajectory \\ Generation for Fixed-Wing UAVs}}}
+  \rhead{{\textbf{Real-Time Optimal Trajectory \\ Generation for Fixed-Wing UAVs.}\\ Campillo Simón, Abimael. Autumn 2025.}}
   \lhead{\includegraphics[width=5.5cm]{Figures/logo_eseiaat.png} }
    \cfoot{\thepage}
    }
@@ -115,6 +115,12 @@ INTENTIONALLY LEFT BLANK.
 \newpage
 
 \pagestyle{fancy}
+\fancypagestyle{plain}{
+  \fancyhf{}
+  \rhead{{\textbf{Real-Time Optimal Trajectory \\ Generation for Fixed-Wing UAVs.}\\ Campillo Simón, Abimael. Autumn 2025.}}
+  \lhead{\includegraphics[width=5.5cm]{Figures/logo_eseiaat.png} }
+   \cfoot{\thepage}
+   }
 \pagenumbering{Roman}
 
 
