--- a/project_charter/packages.tex
+++ b/project_charter/packages.tex
@@ -10,6 +10,7 @@
 \usepackage{fancyhdr}
 \usepackage{vmargin}
 \usepackage{setspace}
+\usepackage[hidelinks]{hyperref}
 \usepackage[acronym,nonumberlist]{glossaries}
 \makeglossaries
 \usepackage{parskip}
