Project Charter finished. Final version added with all related files.

--- a/project_charter/Files/Abbreviations.tex
+++ b/project_charter/Files/Abbreviations.tex
@@ -6,3 +6,7 @@
 \newacronym{dof}{DOF}{Degree of Freedom}
 \newacronym{gps}{GPS}{Global Positioning System}
 \newacronym{qhil}{QHIL}{Quasi-Hardware-in-the-Loop}
+\newacronym{sa}{SA}{Singular Aircraft}
+\newacronym{rpa}{RPA}{Remotely Piloted Aircraft}
+\newacronym{lqr} {LQR}{Linear Quadratic Regulator}
+\newacronym{mpc}{MPC}{Model Predictive Control}
