--- a/project_charter/Files/Justification.tex
+++ b/project_charter/Files/Justification.tex
@@ -1,9 +1,15 @@
 \chapter{Justification}
 
-\textcolor{red}{Justificar la necesidad de este proyecto mediante la inexistencia de calculadores de trayectorias optimas en maniobras de extinción de incendios para UAVs (campo inexplotado en esta concreción, pues algoritmos de cálculo de trayectorias ya existen). Añadir el contexto del proyecto de Singular Aircraft, su definición, las necesidades del Flyox en cuanto a autonomia y la maniobra de descarga. Destacar la visión global del proyecto pero profundizar en las partes específicas, detallando las ventajas y desventajas de la visión que se pretende implementar.}
+In recent years, the increasing occurrence and intensity of wildfires have highlighted the urgent need for more effective and autonomous aerial firefighting solutions \cite{FAOFireStats2023}. From a global perspective, enhancing the autonomy and operational efficiency of \gls{uas} for emergency response represents a major step toward safer and more sustainable fire suppression operations. In particular, fixed-wing \gls{uas} offer significant advantages over rotary-wing systems, including greater range, endurance, and payload capacity, making them suitable for long-duration firefighting missions in hazardous environments \cite{UAVFireSuppression2022}.
 
-Approach and explanation of the need to carry out the project from a global vision, i.e. detailing why this project may be necessary.
+This project is developed within the framework of an extracurricular internship at Singular Aircraft S.L., an aerospace company founded by Luis Carrillo with over twelve years of experience in the design, manufacture, operation, and certification of \gls{rpa} and \gls{uav}. The company has designed and fully developed the Flyox I, currently the largest civilian fixed-wing \gls{uav} designed for firefighting, humanitarian aid, and surveillance missions \cite{SingularWeb}. Several previous projects and studies carried out within the company have focused on the improvement of the Flyox I’s flight systems, payload integration, and mission control capabilities. Building upon these developments, this thesis contributes to the new generation of the Flyox I platform, which aims to introduce advanced levels of autonomy for critical mission phases.
 
-Furthermore, in case the thesis is based on another project or is developed within the framework of a company or research group, the section must also include a brief explanation about the context of the work, that is, about possible related projects and thesis that have been done before, focusing and contextualizing the work.
+Specifically, this new generation seeks to enable the aircraft to perform the water-drop manoeuvre autonomously, reducing operator workload and enabling missions under low-visibility or high-risk conditions. To achieve this, the aircraft must be equipped with a trajectory computation algorithm capable of planning and re-planning the discharge trajectory in real time, considering aircraft dynamics, environmental constraints, and safety margins, without human validation. This capability represents a fundamental step toward full operational autonomy in firefighting \gls{uas}.
 
-Although this section begins with a global vision, it must approach a more specific vision, detailing the possible advantages and disadvantages that the student's approach may have.
+The current work focuses on developing and validating such an algorithm through optimal control and numerical optimisation techniques. The approach aims to fill existing gaps in trajectory generation software for \gls{uas} by integrating non-standard operational constraints such as \gls{dem}, \gls{nfz}s, atmospheric conditions, and aircraft operational limits. Although not all these constraints will be implemented in the present study, they define the broader framework in which this research is embedded.
+
+The thesis will include the mathematical modelling of the water-drop manoeuvre and apply advanced optimal control strategies (e.g. \gls{lqr} or \gls{mpc}) to generate feasible flight paths. Furthermore, the algorithm will include a decision logic that evaluates the feasibility of each discharge mission based on operator-defined parameters (e.g., drop location, altitude, and heading) and the real-time state of the aircraft. This approach is relatively novel in the context of autonomous \gls{uas} firefighting operations.
+
+Validation will be performed in a \gls{qhil} environment using the same autopilot as the real Flyox aircraft, ensuring consistency and reliability between simulation and physical systems. This contributes to the practical applicability of the results within Singular Aircraft’s future development roadmap.
+
+From a critical standpoint, the proposed approach offers clear advantages: it enables a higher degree of autonomy, improved safety by reducing human involvement in dangerous environments, and adaptability to real-time mission changes. However, potential limitations include the computational cost of real-time optimisation, the need for accurate environmental data, and the complexity of integrating such systems into certified aircraft architectures. Despite these challenges, this research represents an essential step toward achieving the next level of autonomy in firefighting \gls{uas} operations.
