--- a/project_charter/Files/Object.tex
+++ b/project_charter/Files/Object.tex
@@ -4,6 +4,6 @@ The main objective of this thesis is to develop an algorithm capable of computin
 
 Specifically, the algorithm aims to determine the descent path during the water-drop manoeuvre and the subsequent ascent trajectory, ensuring obstacle avoidance and compliance with mission constraints. Furthermore, it is intended to achieve a computational efficiency that enables real-time execution, making it suitable for on-board integration within the aircraft’s guidance system.
 
-This thesis is developed  in collaboration of Singular Aircraft as part of a extracurricular internship agreement along with other tasks.
+This thesis is developed  in collaboration of Singular Aircraft S.L. as part of a extracurricular internship agreement along with other tasks.
 
 
