--- a/project_charter/Files/Scope.tex
+++ b/project_charter/Files/Scope.tex
@@ -36,7 +36,7 @@ This section includes a brief description of the work-packages this thesis addre
     \begin{itemize}
         \item Requirements of the stakeholders of the project.
         \item Formulation of the flight mechanics associated to a vertical plane water-drop manoeuvre, including discontinuous weight of the \gls{uav} during discharge and the aircraft operational limits.
-        \item Pre-processing, when needed, and formulation of the different constraints mentioned: \gls{dem}, \gls{nfz} and wind conditions. \footnote{Notice that the detected obstacles will be treated as \gls{nfz} and, therefore, its definition is not necessary. When the \gls{uav} detects a new obstacle on its flight path, the algorithm will receive a set of coordinates to treat it as a new \gls{nfz} and then optimal trajectory will be recomputed.}
+        \item Pre-processing, when needed, and formulation of the different constraints mentioned: \gls{dem}, \gls{nfz} and wind conditions. \footnote{Notice that the detected obstacles will be treated as \gls{nfz} and, therefore, its definition is not necessary. When the \gls{uav} detects a new obstacle on its flight path, the algorithm will receive a set of coordinates to treat it as a new \gls{nfz} and then optimal trajectory will be re-computed.}
         \item Implementation and validation of a code capable of computing the optimal flight trajectory to perform the water-drop manoeuvre in a given set of initial conditions (aircraft dynamics and pre-defined constraints) and the \gls{gps} discharge point.
         \item Implementation of changes, if needed, on the flight plan generator function and verification through \gls{qhil} for a minimum time flight trajectory.
         \item Analysis of code performance for different set of constraints.
