--- a/project_charter/myrefs.bib
+++ b/project_charter/myrefs.bib
@@ -1,6 +1,25 @@
-@online{eseiaat,
-    title = {Citar i elaborar la bibliografia},
-    url = {https://bibliotecnica.upc.edu/investigadors/citar-elaborar-bibliografia},
-    author={UPC},
-    year={2021},
+@misc{FAOFireStats2023,
+  author       = {{Food and Agriculture Organization of the United Nations}},
+  title        = {Global Forest Fire Assessment 2023},
+  year         = {2023},
+  howpublished = {\url{https://www.fao.org/forest-resources-assessment/fire/en/}},
+  note         = {Accessed: 2025-10-08}
+}
+
+@article{UAVFireSuppression2022,
+  author       = {Restas, Agoston},
+  title        = {Drone Applications for Wildfire Management: From Detection to Suppression},
+  journal      = {Fire Technology},
+  year         = {2022},
+  volume       = {58},
+  number       = {3},
+  pages        = {1011--1036},
+  doi          = {10.1007/s10694-021-01169-9}
+}
+
+@misc{SingularWeb,
+  author       = {{Singular Aircraft S.L.}},
+  title        = {Flyox I -- The World's Largest Civilian UAV},
+  howpublished = {\url{https://singularaircraft.com/}},
+  note         = {Accessed: 2025-10-08}
 }
